fixed the way the image is displayed on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,7 +64,9 @@ h2 {
 	
 	@media screen and (max-device-width: 800px) {
     html {
-         background: image-url("food.jpg");  
+         background: image-url("food.jpg") no-repeat fixed; 
+			   background-size: cover;
+			  
 			   margin-top: 0;
     }
 		.navbar {margin-bottom: 0;
